--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 PROJECT(Genji)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
+ADD_DEFINITIONS(-Wall -O3)
 AUX_SOURCE_DIRECTORY(. DIR_SRCS)
-ADD_EXECUTABLE(test ${DIR_SRCS})
-TARGET_LINK_LIBRARIES(test pthread)
+ADD_EXECUTABLE(testLFQueue ${DIR_SRCS})
+TARGET_LINK_LIBRARIES(testLFQueue pthread)
