add mutexQueue, update spinLock and test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ PROJECT(Genji)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 ADD_DEFINITIONS(-Wall -O3)
 AUX_SOURCE_DIRECTORY(. DIR_SRCS)
-ADD_EXECUTABLE(testLFQueue ${DIR_SRCS})
-TARGET_LINK_LIBRARIES(testLFQueue pthread)
+ADD_EXECUTABLE(testQueue ${DIR_SRCS})
+TARGET_LINK_LIBRARIES(testQueue pthread)
